# SC2-Replay-Renamer

./: .gitignore  README.md  ReplayRenamer.py  ReplayRenamer.spec  build_exe.bat  pyproject.toml
.github/workflows/: pythonpackage.yml
sc2reader/data/HotS/: 24764_units.csv
sc2reader/data/LotV/: base_abilities.csv  base_units.csv
tests/: test_replays.py
tests/test_replays/: invalid_bot_replay.SC2Replay  valid_custom_game_replay.SC2Replay
