[tool.poetry]
name = "sc2-replay-renamer"
version = "0.1.0"
description = ""
authors = ["BuRny <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PySimpleGUI = "^4.30.0"
sc2reader = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
radon = "^4.3.2"
pyinstaller = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
