[tool.poetry]
name = "sc2-replay-renamer"
version = "0.1.0"
description = ""
authors = ["BuRny <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PySimpleGUI = "^4.30.0"
mpyq = "^0.2.5"
sc2reader = "^1.6.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
radon = "^4.5.0"
pyinstaller = "^4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
