[tool.poetry]
name = "sc2-replay-renamer"
version = "0.1.0"
description = ""
authors = ["BuRny <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9 <3.13"
PySimpleGUI = "^4"
mpyq = "^0.2.5"
sc2reader = "^1.6.0"
loguru = "^0.7"

[tool.poetry.dev-dependencies]
pytest = "^8"
radon = "^6"
pyinstaller = "^6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
